general fixes, job view and social items extra padding on dashboard
--HG--
branch : ui0.8

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -2738,11 +2738,13 @@ div.wide.form{
     .box-sizing();
 }
 
+.TitleBarAndDetailsView,
 .ProgressView,
 #MetadataViewEditView,
 .TableOfContentsView,
 .DetailsView,
 .EditAndDetailsView{
+//.AppContent{
     > div{
        //margin-right:20px;
        margin-bottom:20px;
