--- a/app/themes/default/less/thread-view.less
+++ b/app/themes/default/less/thread-view.less
@@ -371,6 +371,11 @@
         padding-right:15px;
     }
 }
+.SocialItemsListView{
+    .items td{
+        padding-left: 0 !important;
+    }
+}
 
 .delete-social-item{
     margin-left:5px;
